Creating MidiToCSV class
will make me able to create csv version of the MidiFile that i will use
later with TensorFlow.

Change-Id: I1da990a5a647c1230b4a6189793f796679f95c6b

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Skip to content
+﻿Skip to content
 This repository
 Search
 Pull requests
@@ -336,6 +336,7 @@ ASALocalRun/
 
 # MSBuild Binary and Structured Log
 *.binlog
+#Tracking
 
 © 2018 GitHub, Inc.
 Terms
@@ -348,4 +349,6 @@ API
 Training
 Shop
 Blog
-About
+
+# ---------start of my wanted ignore stuff----------
+**/Created
